--- a/src/containers/LoginPage/LoginPage.css
+++ b/src/containers/LoginPage/LoginPage.css
@@ -3,8 +3,18 @@
     margin: auto;
 }
 
+.header {
+    text-align: center;
+    background-color: brown;
+    padding: 1%;
+    margin: 3%;
+}
+.header h1 {
+    font-style: italic;
+}
+
 .container {
-    margin: 9% auto 3% auto;
+    margin: 3% auto;
     padding: 30px 0 60px 0;
     text-align: center;
     font-weight: 300;
