--- a/src/components/user/Dashboard/BoxesGroup.css
+++ b/src/components/user/Dashboard/BoxesGroup.css
@@ -6,7 +6,8 @@
     grid-template-rows: 240px 240px;
     place-items: center;
     /* decorating */
-    background-color: lightgrey;
+    background-color: rgb(240, 240, 240); 
+    /* lightgrey je bio:  background-color */
     /* drag style */
     cursor: default;
   }
@@ -18,7 +19,7 @@
     height: 84%;
     width: 90%;
     /* decorating */
-    border-radius: 10px;
+    border-radius: 3px;
     /* drag style */
     cursor: move;
   }
