--- a/src/containers/LoginPage/LoginPage.css
+++ b/src/containers/LoginPage/LoginPage.css
@@ -13,7 +13,7 @@
     font-style: italic;
 }
 
-.container {
+.container-wrapper .container {
     margin: 3% auto;
     padding: 30px 0 60px 0;
     text-align: center;
@@ -23,7 +23,7 @@
     border-radius: 10px;
 }
 
-.container input {
+.container-wrapper .container input {
     border: 1px solid rgba(252, 252, 252, 0.4);
     border-radius: 3px;
     background-color: rgba(252, 252, 252, 0.5);
@@ -35,7 +35,7 @@
     font-size: 1em;
 }
   
-.container button {
+.container-wrapper .container button {
     background-color: white;
     border: 0;
     padding: 10px 15px;
@@ -45,7 +45,7 @@
     font-size: 1em;
 }
 
-.container p {
+.container-wrapper .container p {
     color: red;
     height: 1em;
     width: clamp(100px, 100%, 250px);
