--- a/src/components/user/SidebarUser/SidebarUser.css
+++ b/src/components/user/SidebarUser/SidebarUser.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     padding: 20px 0px;
+    z-index: 999;
 }
 .sidebar-user a {
     cursor: pointer;
