--- a/src/components/user/SidebarUser/SidebarUser.css
+++ b/src/components/user/SidebarUser/SidebarUser.css
@@ -33,3 +33,8 @@
     padding: 10px 30px;
     cursor: context-menu;
 }
+.sidebar-user p {
+    color: black;
+    padding: 0px 30px 10px;
+    cursor: context-menu;
+}
