--- a/src/containers/LoginPage/LoginPage.css
+++ b/src/containers/LoginPage/LoginPage.css
@@ -6,15 +6,14 @@
 .container-wrapper .header {
     text-align: center;
     background-color: brown;
-    padding: 1%;
-    margin: 3%;
+    padding: 30px;
 }
 .container-wrapper .header h1 {
     font-style: italic;
 }
 
 .container-wrapper .container {
-    margin: 3% auto;
+    margin: 9% auto;
     padding: 30px 0 60px 0;
     text-align: center;
     font-weight: 300;
