--- a/src/components/user/Search/Search.css
+++ b/src/components/user/Search/Search.css
@@ -1,13 +1,13 @@
 
 .input_div {
-    padding: 3%;
+    padding: 1%;
     width: 100%;
     display: flex;
     justify-content: center;
 }
 
 .checkboxes_wrapper {
-    padding: 3%;
+    padding: 2em 1em;
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
@@ -18,5 +18,5 @@
 
 .checkbox_div input {
     transform: scale(1.5);
-    margin: 1.5%;
+    margin: 6px;
 }
