Making Sidebar a reusable component and importing it in every component, 404page implemented

--- a/src/components/errorPages/ErrorPage404.css
+++ b/src/components/errorPages/ErrorPage404.css
@@ -1,4 +1,9 @@
 
+.wrapper_404 {
+    padding: 3%;
+}
+
+/* MAKE 404 page OVER everycomponent */
 /* .middle.aligned.column {
     background-color: white;
     height: 200vh;
